--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "version": "1.0.0",
   "private": true,
   "name": "app",
-  "main": "./src/index.tsx",
+  "main": "./src/App.tsx",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "generate": "yarn plop --plopfile generators/plopfile.js"
   },
   "dependencies": {
     "expo": "^48.0.7",
@@ -27,6 +28,7 @@
     "babel-plugin-styled-components": "^2.1.3",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
+    "plop": "^3.1.2",
     "prettier": "^2.8.8",
     "typescript": "^4.6.3"
   }
